--- a/css/fillinfx.css
+++ b/css/fillinfx.css
@@ -14,17 +14,21 @@
   left: 0;
   z-index: -1;
   content: '';
-  background: #FCEE21;
+  background: transparent;
   transition: transform 0.7s;
 }
 
 .item01::before {
   transform-origin: right top;
   transform: scale(0, 1);
+        font-size: 10em;
+
 }
 .item01:hover::before {
   transform-origin: left top;
   transform: scale(1, 1);
+        font-size: 10em;
+
 }
 
 
