--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
     font-family: "Roboto", Sans-serif;
     background-image: url(../resources/bg.jpeg);
     background-color: black;
+    overflow: scroll;
 }
 
 p {
@@ -46,11 +47,11 @@ h2{font-size:2.5em;}
 
 #content {
     width: 95%;
-    height: 100vh;
+    height: 110vh;
     right: 2.5%;
     
     transition: all 0.3s;
-    position: fixed;
+    position: absolute;
     
     background-color: black;
     opacity: 100%;
@@ -59,11 +60,12 @@ h2{font-size:2.5em;}
 }
 
 .logo img{width: 130px;}
-.logocontainer {width: 100%; position: fixed; top:0; left: 10%; }
+.logocontainer {width: 100%; position: absolute; top:0; left: 10%; }
 
 
 
-.text{text-align: left; color: white; line-height: 1; width: 80%;}
+.text{text-align: left; color: white; line-height: 1; width: 80%;   
+}
 
 .links { width:80%; top:20%;left:15%;transition-duration: 10s; text-align: left; line-height: 1;color: white;}
 li:active {color:blue;}
