--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
 overflow-y:scroll;
     overflow-x: hidden;
     height: 100%;
+    transition-duration: 1s;
 }
 
 p {
@@ -24,6 +25,7 @@ a:focus {
     color: inherit;
     text-decoration: none;
     transition: all 0.3s;
+    font-weight: 5000;
 }
 
 
@@ -35,7 +37,7 @@ a:focus {
 
 h5{font-size:0.7em;}
 h3{font-size:1.5em;}
-h2{font-size:2.5em;}
+h2{font-size:2.5em; }
 
 
 
@@ -46,16 +48,40 @@ h2{font-size:2.5em;}
 
 
 
-.logo img{width: 100px; margin-left:30%;}
-.logocontainer {width: 100%; position: absolute; top:0; left: 5%; }
+.header img{
+  width: 100px;display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.header {
+    width: 100%;
+    background-color: black;
+    position: fixed; 
+    height:100px;
+    
+}
 
+.nav {
+    width: auto;position: fixed;right:0;margin-top:-0px; z-index: 3; }
 
+.button{background-color: transparent; text-transform:uppercase; border: none; color: black;}
+.socialmedia img{width:50px;}
+.socialmedia li {list-style: none;margin-right: 10px;padding:0;}
+.button > span {
+    display: block;
+    height: 100%;
+}
+.socialmedia {padding:0}
 
-.text{
-text-align: left; color: white; line-height: 1; width: 90%; background-color: black; padding: 1em; padding-top:10em;padding-bottom:5em;margin-top: -10em;
+.container{position: static;padding-top: 15em;}
+
+.item img{width:100%;}
+.titulo {padding-bottom: 2em;}
+
+@media (max-width: 768px) {
+.socialmedia {display:none;}
 }
 
 
 
-
-
+.next{letter-spacing: 0.5em;font-size: 1EM; }
